azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "siteName": {
      "type": "string",
      "defaultValue": "Flamenco",
      "metadata": {
        "description": "The name of the web app that you wish to create."
      }
    },
    "hostingPlanName": {
      "type": "string",
      "metadata": {
        "description": "The name of the App Service plan to use for hosting the web app."
      }
    },
    "siteLocation": {
      "type": "string",
      "defaultValue": "West Europe",
      "metadata": {
        "description": "The location to use for creating the web app and hosting plan. It must be one of the Azure locations that support web apps."
      }
    },
    "batchAccountName": {
      "defaultValue": "flamenco",
      "type": "string"
    },
    "storageAccountName": {
      "defaultValue": "cloud01diag",
      "type": "string"
    },
    "repoURL": {
      "type": "string"
    },
    "branch": {
      "type": "string"
    },
    "flamencoServerUrl": {
      "type": "string",
      "defaultValue": "https://cloud.blender.org/",
      "metadata": {
        "description": "URL of the Flamenco Server"
      }
    },
    "adminUsername": {
      "type": "string",
      "defaultValue": "azureuser",
      "metadata": {
        "description": "Username of the admin user (not 'root')"
      }
    },
    "adminSshKey": {
      "type": "string",
      "defaultValue": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDPrFG8zEdomtcrUzMLCBEncSb5Z0/tFSPGKyZr0mIZpR7SyarX/eKTB6Cha7m54IEpbv3O26v2lU3/Nx6mBRH1XQm0Z32UHJfvl3bzKPeZhZYNkYm0GnvDrNu577xGBeorPXGySxPMfqnr7kQF1OyhQHbejXnTgWBnwr9bqhwyvLcIrpd2F1klLwSNSAaE9B0CoON9jwkDPk2tXYEMNaK1uSpWsx2VFEk6t1zrL2Naxs1NxX8Bm4+O2NW/7v1briFRTfc8kd74wm7TLZvqsq81IwUKQBKv/1XW783cD0elNZ4s9bmtpUpiR9H4Gqw9XlmnYTTpOJwiDVECEXNi0vdoK2hnY+q8KH1K9cKOfiE2GcTdWjwDfBBuEoTmBWFPQmo3zY7Fq2gxjfOyPfarhBPKO9Sn0xmr2W6qGgOxuw8RXFfqZjV3Nem2g [...]
      "metadata": {
        "description": "SSH key of the admin user"
      }
    }
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "FlamencoManager.NetSecGroup",
      "apiVersion": "2018-10-01",
      "location": "[parameters('siteLocation')]",
      "properties": {
        "securityRules": [
          {
            "name": "SSH",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 300,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "HTTPS",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 300,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      },
      "dependsOn": []
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "name": "FlamencoManager.VNet",
      "apiVersion": "2018-10-01",
      "location": "[parameters('siteLocation')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.0.0.0/24"
          ]
        },
        "subnets": [
          {
            "name": "default",
            "properties": {
              "addressPrefix": "10.0.0.0/24",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'FlamencoManager.NetSecGroup')]"
              },
              "serviceEndpoints": [],
              "delegations": []
            }
          }
        ],
        "virtualNetworkPeerings": [],
        "enableDdosProtection": false,
        "enableVmProtection": false
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'FlamencoManager.NetSecGroup')]"
      ]
    },
    {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "name": "FlamencoManager.VNet/default",
      "apiVersion": "2018-10-01",
      "properties": {
        "addressPrefix": "10.0.0.0/24",
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'FlamencoManager.NetSecGroup')]"
        },
        "serviceEndpoints": [],
        "delegations": []
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', 'FlamencoManager.VNet')]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'FlamencoManager.NetSecGroup')]"
      ]
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "sku": {
        "name": "Basic",
        "tier": "Regional"
      },
      "name": "FlamencoManager.PublicIPv4",
      "apiVersion": "2018-10-01",
      "location": "[parameters('siteLocation')]",
      "properties": {
        "publicIPAddressVersion": "IPv4",
        "publicIPAllocationMethod": "Dynamic"
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "sku": {
        "name": "Basic",
        "tier": "Regional"
      },
      "name": "FlamencoManager.PublicIPv6",
      "apiVersion": "2018-10-01",
      "location": "[parameters('siteLocation')]",
      "properties": {
        "publicIPAddressVersion": "IPv6",
        "publicIPAllocationMethod": "Dynamic"
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "name": "FlamencoManager.NIC",
      "apiVersion": "2018-10-01",
      "location": "[parameters('siteLocation')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAddress": "10.0.0.1",
              "privateIPAllocationMethod": "Static",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'FlamencoManager.PublicIPv4')]"
              },
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', 'FlamencoManager.VNet', 'default')]"
              },
              "primary": true,
              "privateIPAddressVersion": "IPv4"
            }
          },
          {
            "name": "ipconfig2",
            "properties": {
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'FlamencoManager.PublicIPv6')]"
              },
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', 'FlamencoManager.VNet', 'default')]"
              }
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'FlamencoManager.NetSecGroup')]"
        },
        "primary": true
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', 'FlamencoManager.PublicIPv4')]",
        "[resourceId('Microsoft.Network/publicIPAddresses', 'FlamencoManager.PublicIPv6')]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', 'FlamencoManager.VNet', 'default')]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'FlamencoManager.NetSecGroup')]"
      ]
    },
    {
      "name": "Flamenco-Manager",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2018-10-01",
      "location": "[parameters('siteLocation')]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_DS1_v2"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "Canonical",
            "sku": "18.04-LTS",
            "offer": "UbuntuServer",
            "version": "latest"
          }
        },
        "osProfile": {
          "computerName": "flamenco-manager",
          "adminUsername": "[parameters('adminUsername')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": true,
            "ssh": {
              "publicKeys": [
                {
                  "keyData": "[parameters('adminSshKey')]"
                }
              ]
            }
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', 'FlamencoManager.NIC')]",
              "properties": {
                "primary": true
              }
            }
          ]
        }
      },
      "resources": [
        {
          "apiVersion": "2015-08-01",
          "name": "appsettings",
          "type": "config",
          "dependsOn": [
            "[resourceId('Microsoft.Compute/virtualMachines', 'Flamenco-Manager')]"
          ],
          "properties": {
            "FLAMENCO_SERVER_URL": "[parameters('flamencoServerUrl')]",
            "OWN_URL": "[concat('https://',resourceId('Microsoft.Compute/virtualMachines', 'Flamenco-Manager').hostNames[0])]",
            "command": "bash scripts/azuredeploy.sh"
          }
        },
        {
          "apiVersion": "2015-08-01",
          "name": "web",
          "type": "sourcecontrols",
          "dependsOn": [
            "[resourceId('Microsoft.Compute/virtualMachines', 'Flamenco-Manager')]"
          ],
          "properties": {
            "RepoUrl": "[parameters('repoURL')]",
            "branch": "[parameters('branch')]",
            "IsManualIntegration": true
          }
        }
      ]
    }
  ],
  "outputs": {
    "siteUri": {
      "type": "string",
      "value": "[concat('https://',resourceId('Microsoft.Compute/virtualMachines', 'Flamenco-Manager').hostNames[0])]"
    }
  }
}
